duniverse/menhirLib.20200211/test/static/bad/let-more.mly
%%

let main(A+, X) := X
